// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegisterPanel Snapshot username state equal empty 1`] = `
Array [
  <Typography
    className="title"
    color="primary"
    data-testid="registerPanelTitle"
  >
    Register a new user
  </Typography>,
  <form
    autoComplete="off"
    noValidate={true}
  >
    <div>
      <Tooltip
        id="tooltipUsername"
        title="Characters, number, _ and @"
      >
        <TextField
          autoFocus={true}
          disabled={false}
          error={false}
          fullWidth={true}
          helperText={null}
          id="username"
          label="Username"
          margin="normal"
          onChange={[Function]}
          type="email"
          value=""
        />
      </Tooltip>
    </div>
    <div>
      <TextField
        disabled={false}
        fullWidth={true}
        id="password"
        label="Password"
        margin="normal"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <Tooltip
      id="tooltipRpPw"
      title="Please type in your password again"
    >
      <TextField
        disabled={false}
        error={false}
        fullWidth={true}
        helperText={null}
        id="repeatPassword"
        label="Repeat Password"
        margin="normal"
        onChange={[Function]}
        type="password"
        value=""
      />
    </Tooltip>
    <div>
      <TextField
        disabled={false}
        error={false}
        fullWidth={true}
        helperText={null}
        id="email"
        label="Email"
        margin="normal"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
    <Tooltip
      id="tooltipRegisterBtn"
      placement="bottom-end"
      title="Please fill out all field above"
    >
      <div
        className="registerBtnDiv"
      >
        <Button
          aria-label="Register"
          color="primary"
          disabled={true}
          onClick={[Function]}
          size="small"
          variant="contained"
        >
          Register
        </Button>
      </div>
    </Tooltip>
    <div>
      <Button
        className="switchBtn"
        color="primary"
        data-testid="switchLoginButton"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          }
        }
      >
        Have an account already? Go to login
      </Button>
    </div>
  </form>,
]
`;

exports[`RegisterPanel Snapshot username state not equal empty 1`] = `
Array [
  <Typography
    className="title"
    color="primary"
    data-testid="registerPanelTitle"
  >
    Register a new user
  </Typography>,
  <form
    autoComplete="off"
    noValidate={true}
  >
    <div>
      <Tooltip
        id="tooltipUsername"
        title="Characters, number, _ and @"
      >
        <TextField
          autoFocus={true}
          disabled={false}
          error={false}
          fullWidth={true}
          helperText={null}
          id="username"
          label="Username"
          margin="normal"
          onChange={[Function]}
          type="email"
          value="username"
        />
      </Tooltip>
      <CheckingIndicator
        isAvaliable={false}
        isChecking={false}
      />
    </div>
    <div>
      <TextField
        disabled={false}
        fullWidth={true}
        id="password"
        label="Password"
        margin="normal"
        onChange={[Function]}
        type="password"
        value=""
      />
    </div>
    <Tooltip
      id="tooltipRpPw"
      title="Please type in your password again"
    >
      <TextField
        disabled={false}
        error={false}
        fullWidth={true}
        helperText={null}
        id="repeatPassword"
        label="Repeat Password"
        margin="normal"
        onChange={[Function]}
        type="password"
        value=""
      />
    </Tooltip>
    <div>
      <TextField
        disabled={false}
        error={false}
        fullWidth={true}
        helperText={null}
        id="email"
        label="Email"
        margin="normal"
        onChange={[Function]}
        type="email"
        value=""
      />
    </div>
    <Tooltip
      id="tooltipRegisterBtn"
      placement="bottom-end"
      title="Please fill out all field above"
    >
      <div
        className="registerBtnDiv"
      >
        <Button
          aria-label="Register"
          color="primary"
          disabled={true}
          onClick={[Function]}
          size="small"
          variant="contained"
        >
          Register
        </Button>
      </div>
    </Tooltip>
    <div>
      <Button
        className="switchBtn"
        color="primary"
        data-testid="switchLoginButton"
        onClick={
          [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "isThrow": false,
                "value": undefined,
              },
            ],
          }
        }
      >
        Have an account already? Go to login
      </Button>
    </div>
  </form>,
]
`;
